--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "movies",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.1",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,6 +8,7 @@
   "author": "chenglong",
   "license": "ISC",
   "devDependencies": {
+    "body-parser": "^1.13.1",
     "express": "^4.12.4",
     "gulp": "^3.9.0",
     "gulp-coffee": "^2.3.1",
@@ -19,6 +19,33 @@
     "jade": "^1.11.0",
     "moment": "^2.10.3",
     "mongoose": "^4.0.5",
-    "requirejs": "^2.1.18"
-  }
+    "multer": "^0.1.8",
+    "requirejs": "^2.1.18",
+    "underscore": "^1.8.3"
+  },
+  "dependencies": {
+    "body-parser": "^1.13.1",
+    "express": "^4.12.4",
+    "gulp": "^3.9.0",
+    "gulp-coffee": "^2.3.1",
+    "gulp-copy": "^0.0.2",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.0.1",
+    "gulp-uglify": "^1.2.0",
+    "jade": "^1.11.0",
+    "moment": "^2.10.3",
+    "mongoose": "^4.0.5",
+    "multer": "^0.1.8",
+    "requirejs": "^2.1.18",
+    "underscore": "^1.8.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/xiaoDC/movie.git"
+  },
+  "bugs": {
+    "url": "https://github.com/xiaoDC/movie/issues"
+  },
+  "homepage": "https://github.com/xiaoDC/movie#readme",
+  "description": ""
 }
